- fixed regression where using stored procs with datasets (bug #44460)
- fixed compilation under VS 2005 (bug #44822)
- fixed support for bool data type in entity framework support
- fixed regression where a user could no longer call GetBytes on a guid column (bug #44507)
- made some fixes to the syntax coloring of sql inside visual studio
- fixed display name of triggers inside server explorer

Version 6.0.3 - 4/22/09
- fixed broken connection prompting
- fixed installer that was no longer referencing the right folders for Visual Studio assemblies [bug #44141]
- made integer column types returned with table and column collections use the same data type
  when referencing MySql 4.1 servers and MySql 5.0+ servers (bug #44123)
- lots of unreported bug fixes

Version 6.0.2
- fixed registration problem with Visual studio (bug #44064)
- fixed problem where stored procedures and functions could not be deleted from server explorer
- changed function generation so that it ignores schema just like we did with tables in 6.0.1
- fixed problem with new tokenizer that caused some values with equals to not be parsed
  correctly (bug #44318)

Version 6.0.1
- Fixed problem with the foreign key columns schema collection
- Fixed problem with index column schema collection
- Fixed problem with generation of medium and longtext columns in entity models
- Changed entity framework generation so that schemas are not written out.  This allows
  a single model to swing from one database to another by just changing the connection
  string (bug #43274)
- fixed problem in sql generation that caused decimal values to be generated incorrectly
  when using a certain cultures (bug #43574)

Version 6.0
- Massive speedups
- Improved sql tokenizing speed greatly.  Patch submitted by Maxim Mass (bug #36836)
- Fixed possible overflow bug in MySqlPacket.ReadLong (bug #36997)
- Added UDF schema collection